# nl2sql-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  fastmcp.json  pyproject.toml  server-info.json
docs/: ARCHITECTURE.md  GAP_ANALYSIS.md  NL2SQL_RESEARCH.md  OVERVIEW.md  PROMPT-GPT4.1.md  RESEARCH.md
docs/prompts/: PROMPT-GPT5.md
scripts/: __init__.py  healthcheck.py  prefetch_embeddings.py  test_agent_harness.py  test_intelligence_harness.py  test_sqlglot_harness.py
src/nl2sql_mcp/: __init__.py  cli.py  models.py  server.py
src/nl2sql_mcp/agent/: README.md  __init__.py  agent.py  mcp_tools.py  models.py
src/nl2sql_mcp/builders/: __init__.py  response_builders.py
src/nl2sql_mcp/execute/: __init__.py  mcp_tools.py  models.py  runner.py
src/nl2sql_mcp/intelligence/: README.md  __init__.py  embeddings.py  expansion.py  graph.py  lightweight_ner.py  mcp_tools.py  profiling.py  query_engine.py  retrieval.py  sampling.py  utils.py
src/nl2sql_mcp/schema_tools/: README.md  __init__.py  constants.py  embeddings.py  exceptions.py  explorer.py  lightweight_ner.py  mcp_tools.py  models.py  mssql_spatial.py  profiling.py  query_engine.py  reflection.py  response_builders.py  retrieval.py  sampling.py  utils.py
src/nl2sql_mcp/services/: README.md  __init__.py  config_service.py  schema_service.py  schema_service_manager.py  state.py
src/nl2sql_mcp/sqlglot_tools/: README.md  __init__.py  mcp_tools.py  models.py  service.py
tests/: __init__.py  conftest.py  test_archive_detection.py  test_embedding_fallback.py  test_execute_runner.py  test_ner_canonicalization.py  test_smoke.py  test_sqlglot_tools.py
